--- a/DevelopmentWithADot.NHibernateFluentValidation/DevelopmentWithADot.NHibernateFluentValidation.csproj
+++ b/DevelopmentWithADot.NHibernateFluentValidation/DevelopmentWithADot.NHibernateFluentValidation.csproj
@@ -30,6 +30,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>..\..\DevelopmentWithADot.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Iesi.Collections">
       <HintPath>..\packages\Iesi.Collections.3.2.0.1001\lib\Net35\Iesi.Collections.dll</HintPath>
@@ -53,6 +59,9 @@
     <Compile Include="ValidationException.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\DevelopmentWithADot.snk">
+      <Link>DevelopmentWithADot.snk</Link>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
